<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/xxMin1TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_03"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mins"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_sample_date"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:textAlignment="center">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/xxMin2TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_105"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mins"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ttdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_total_till_date"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
